src/test/ui/rfc1445/feature-gate.with_gate.stderr
error: fatal error triggered by #[rustc_error]
  --> $DIR/feature-gate.rs:21:1
   |
LL | / fn main() {
LL | |     let y = Foo { x: 1 };
LL | |     match y {
LL | |         FOO => { }
LL | |         _ => { }
LL | |     }
LL | | }
   | |_^

error: aborting due to previous error

